# CTX

./: .gitignore  :1  CLAUDE.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  PRIVACY.md  README.md  commit_tree.txt  compute_ndcg_correlation.py  ctx_retriever_autoinstall.pth  north-star.md  pyproject.toml  requirements.txt  resume-session.sh  run_coir_eval.py  run_experiment.py  run_llm_eval.py  run_llm_eval_openrouter.py  run_llm_eval_opensource.py  run_llm_eval_v2.py
.claude-plugin/: marketplace.json  plugin.json
.claude/hooks/: inject_decisions.py  load_session_context.py
.github/workflows/: publish.yml
.omc/: decision_corpus.json  episodes.jsonl  goal-tree.json  infinite-state.archive.jsonl  infinite-state.json  live-state.json  session-decisions.md  world-model.json
.playwright-mcp/: page-2026-04-30T15-22-39-257Z.yml  page-2026-04-30T15-25-06-586Z.yml  page-2026-04-30T15-26-14-867Z.yml  page-2026-04-30T15-52-23-674Z.yml  page-2026-04-30T16-28-22-702Z.yml  page-2026-04-30T16-28-35-191Z.yml  page-2026-04-30T17-12-18-762Z.yml  page-2026-05-02T00-03-02-363Z.yml  page-2026-05-02T00-03-09-599Z.yml  page-2026-05-06T02-21-29-397Z.yml  page-2026-05-06T08-19-28-678Z.yml  page-2026-05-06T08-19-51-505Z.yml
benchmarks/eval/: aggregated_stat_report.py  citation_probe.py  claude_sonnet_ctx_eval.py  coir_repobench_integrated_eval.py  cross_session_recall.py  decide_bench.py  decision_drr.py  doc_retrieval_eval_v2.py  downstream_llm_eval.py  expand_mab_templates.py  g1_changelog_eval.py  g1_cross_domain_generalization.py  g1_docs_bm25_eval.py  g1_docs_memory_eval.py  g1_fair_eval.py  g1_final_eval.py  g1_financebench_bm25_eval.py  g1_format_ablation_eval.py  g1_hybrid_rrf_eval.py  g1_longterm_baseline_eval.py  g1_longterm_eval.py  g1_longterm_metrics.py  g1_pageindex_eval.py  g1_regression_ctx_v2.py  g1_spiral_eval.py  g1_temporal_retention_eval.py  g2_docs_ab_test.py  g2_docs_eval.py  g2_docs_goldset.json  g2_docs_paraphrase_eval.py  g2_goldset.json  g2_goldset_scorer.py  homograph_audit.py  hook_comparison_eval.py  instruction_grounding_eval.py  latency_profiler.py  mab_n50_with_ci.py  mab_real_eval.py  mcnemar_bonferroni.py  multi_dataset_cross_session_eval.py  (+17 more)
benchmarks/results/: CTX_SOYA_VALIDATION_REPORT.docx  RESULTS_INDEX.md  ablation_results.md  aggregated_stat_report.md  bench_comparison_summary.txt  coir_ctx_vs_bm25.json  coir_evaluation.json  coir_evaluation.md  coir_format_analysis.md  coir_repobench_integrated.md  coir_standard_eval.json  ctx_vs_bm25_complete.json  decision_recall_eval.md  differentiation_analysis.md  doc_retrieval_eval.md  doc_retrieval_eval_v2.md  drb_questions.json  drb_results.json  error_analysis.md  external_codebase_eval.md  final_bench_summary.txt  final_report.md  final_report_v10.md  final_report_v2.md  final_report_v3.md  final_report_v4.md  final_report_v5.md  final_report_v6.md  final_report_v7.md  final_report_v8.md  final_report_v9.md  g1_gitlog_hook_test.json  g1_hybrid_rrf_eval.md  g1_iter4_synonym_temporal_results.json  g1_longterm_eval_report.md  g1_openset_qa_pairs.json  g1_openset_report.md  g1_openset_results.json  g2_prefetch_benchmark.json  g2_prefetch_results.json  (+36 more)
docs/: ARCHITECTURE.md  CTX_SPEC_v1.0.md  CTX_v0310_validation_report_KO.docx  DOC_INDEX.md  SOYA_DEPLOYMENT_GUIDE.md  claude_code_integration.md  demo-script-v1.0.md  paper_draft_outline.md
docs/benchmark/: g1-longterm-eval-design.md  g1_g2_publication_framework.md
docs/community/: BLOG_POST_eval_ko.md
docs/decisions/: 20260326-concept-extraction-sema-conc.md  20260326-import-bfs-over-ast.md  20260326-non-symbols-frozenset.md  20260326-path-derived-module-to-file.md  20260326-unified-doc-code-indexing.md  20260506-ctx-monetization-next-items.md
docs/infra/: 20260423-client-onboarding-north-star.md  20260423-wsl2-remote-tailscale-tunneling.md  hook-python-requirements.md  (+1 more)
hf_space/: README.md  app.py  requirements.txt
hf_space_dashboard/: app.py  bench_endpoint.py  puac_endpoint.py  telemetry_endpoint.py  tier3_pairwise.py
hooks/: ctx_real_loader.py  ctx_session_tracker.py
plugin/: README.md
scripts/: market-signals.py  patch_wheel_pth.py  publish.sh  verify_bm25_unified.py
src/: __init__.py  _autoinstall.py
tests/: benchmark_before_after.py  benchmark_results.json  test_ast_improvements.py  test_korean_tokenizer.py  test_trigger_classifier_ko.py
(+229 files in other folders)
