[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ctx-retriever"
version = "0.3.27"
description = "Trigger-Driven Dynamic Context Loading for Code-Aware LLM Agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "jaytoone" }]
keywords = ["retrieval", "llm", "code-search", "context", "rag", "claude-code", "claude-code-plugin"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "rank_bm25>=0.2.2",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "networkx>=3.0",
    "sqlite-vec>=0.1.0",
]

[project.optional-dependencies]
dense = ["chromadb>=0.4.0", "sentence-transformers>=2.2.0"]
dashboard = ["fastapi>=0.100.0", "uvicorn>=0.20.0"]
hub = ["fastapi>=0.110", "uvicorn[standard]>=0.29", "httpx>=0.27", "pyyaml>=6.0", "ptyprocess>=0.7"]
dev = ["pytest>=7.0", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/jaytoone/CTX"
Repository = "https://github.com/jaytoone/CTX"
Documentation = "https://github.com/jaytoone/CTX#readme"
"Bug Tracker" = "https://github.com/jaytoone/CTX/issues"

[project.scripts]
ctx-install = "ctx_retriever.cli.install:main"
ctx-telemetry = "ctx_retriever.cli.telemetry:main"
ctx-dashboard = "ctx_retriever.cli.dashboard:main"
ctx-pro = "ctx_retriever.pro.cli:main"

[tool.setuptools]
packages = [
    "ctx_retriever",
    "ctx_retriever.analysis",
    "ctx_retriever.cli",
    "ctx_retriever.dashboard",
    "ctx_retriever.data",
    "ctx_retriever.evaluator",
    "ctx_retriever.hooks",
    "ctx_retriever.pro",
    "ctx_retriever.retrieval",
    "ctx_retriever.trigger",
    "ctx_retriever.visualizer",
]

[tool.setuptools.package-dir]
"ctx_retriever" = "src"

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml"]
"ctx_retriever" = ["_autoinstall.py"]
"ctx_retriever.hooks" = ["*.py", "ctx-telemetry"]
"ctx_retriever.dashboard" = ["*.py", "static/*.html", "static/*.js", "static/*.css"]
